--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=fastfood
+
+spring.datasource.url=jdbc:mysql://mysql:3306/fastfood
+spring.datasource.username=user
+spring.datasource.password=user_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
