Implement Flayway to manage migrations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,29 @@
 spring.application.name=fastfood
 
-spring.datasource.url=jdbc:mysql://mysql:3306/fastfood
+# Configuração do Banco de Dados
+spring.datasource.url=jdbc:mysql://localhost:3306/fastfood
 spring.datasource.username=user
 spring.datasource.password=user_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuração do JPA
+
+# Especifica a estratégia de geração do esquema do banco de dados. Neste caso, está configurado para "none",
+# o que significa que o Hibernate não fará nenhuma alteração no esquema do banco de dados.
+spring.jpa.hibernate.ddl-auto=none
+
+# Habilita a exibição das instruções SQL geradas pelo Hibernate no console.
+spring.jpa.show-sql=true
+
+# Especifica o dialeto do Hibernate, que é usado para gerar o SQL apropriado para o banco de dados.
+# Aqui, estamos usando o dialeto do MySQL 8.
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Configuração do Flyway
+
+# Habilita o Flyway, uma ferramenta de migração de banco de dados.
+spring.flyway.enabled=true
+
+# Especifica a localização dos scripts de migração do Flyway. Neste caso, está configurado para buscar
+# os scripts na pasta "db/migration" dentro do classpath.
+spring.flyway.locations=classpath:db/migration
