versão dockerfile e docker-compose para processadores arm

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.8"
 
 services:
   mysql:
-    image: mysql:8.0
+#    image: mysql:8.0
+    image: arm64v8/mysql:8.0-oracle
     container_name: mysql_container
     environment:
       MYSQL_ROOT_PASSWORD: root_password
